--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,13 +13,13 @@ jobs:
     - uses: actions/checkout@v2
         # sets up .NET Core SDK 6.0.307
     - name: Setup .NET Core SDK
-      uses: actions/setup-dotnet@v1
+      uses: actions/setup-dotnet@v3.0.3
       with:
-        dotnet-version: 6.0.305
+        dotnet-version: 6.0.307
       
     # publishes Blazor project to the release-folder
     - name: Publish .NET Core Project
-      run: dotnet publish /UmidMuzrapov/pages/pages.csproj -c Release -o release --nologo   
+      run: dotnet publish /pages/pages.csproj -c Release -o release --nologo   
     - name: Commit wwwroot to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@3.7.1
       with:
