--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       with:
         dotnet-version: 6.0.305
     - name: Publish .NET Core Project
-      run: dotnet publish ./pages.csproj -c Release -o release --nologo
+      run: dotnet publish ./pages/pages.csproj -c Release -o release --nologo
     # changes the base-tag in index.html from '/' to 'BlazorGitHubPagesDemo' to match GitHub Pages repository subdirectory
     - name: Change base-tag in index.html from / to pages
       run: sed -i 's/<base href="\/" \/>/<base href="\/pages\/" \/>/g' release/wwwroot/index.html
