--- a/pages/wwwroot/dataJSON/projects.json
+++ b/pages/wwwroot/dataJSON/projects.json
@@ -1,47 +1,111 @@
 [
   {
-    "id": 3,
-    "image": "/pages/dataPhotos/projects/connectN.jpeg",
-    "name": "Connect N",
-    "description": "The program allows the user to play famous Connect 4. Unlike Connect 4, the user can create the board of the size up to 10*10, and the number of player can be up to 5.",
+    "id": 4,
+    "image": "/dataPhotos/projects/patientQueue.jpeg",
+    "name": "Patient Queue",
+    "description": "The program simulates a patient queue using a self-created priority queue and heap sorting.",
     "liveTest": false,
-    "tools": "Python"
+    "tools": "Java",
+    "gitLink": "https://github.com/UmidMuzrapov/java/tree/main/patientQueue/src"
   },
 
   {
     "id": 4,
-    "image": "/pages/dataPhotos/projects/rhymes.jpeg",
+    "image": "/dataPhotos/projects/garden.jpeg",
+    "name": "Garden",
+    "description": "The program simulates a garden where the user can grow a garden.",
+    "liveTest": false,
+    "tools": "Java",
+    "gitLink": "https://github.com/UmidMuzrapov/java/tree/main/garden"
+  },
+  {
+    "id": 4,
+    "image": "/dataPhotos/projects/boxes.jpeg",
+    "name": "Data Structures",
+    "description": "The repository contains data structures -- array, queue, list, stack, graph, etc.",
+    "liveTest": false,
+    "tools": "Java",
+    "gitLink": "https://github.com/UmidMuzrapov/java/tree/main/dataStructures"
+  },
+
+  {
+    "id": 4,
+    "image": "/dataPhotos/projects/connectFour.jpeg",
+    "name": "Coonect Four",
+    "description": "The program allows two users to play ConnectFour game. The target values can be from 3 to 6 for win. The user can play game again if they want.",
+    "liveTest": false,
+    "tools": "Java",
+    "gitLink": "https://github.com/UmidMuzrapov/java/tree/main/connectFour/src"
+  },
+
+  {
+    "id": 4,
+    "image": "/dataPhotos/projects/cheapHouses.png",
+    "name": "Cheap Houses",
+    "description": "The program reads data from a CSV file, and plots the the houses.",
+    "liveTest": false,
+    "tools": "Java",
+    "gitLink": "https://github.com/UmidMuzrapov/java/tree/main/cheapHouses/src"
+  },
+
+  {
+    "id": 3,
+    "image": "/dataPhotos/projects/TSP.jpeg",
+    "name": "TSP",
+    "description": "The program solves the TSP using one of the four algorithms.",
+    "liveTest": false,
+    "tools": "Java",
+    "gitLink": "https://github.com/UmidMuzrapov/python/tree/main/connectN"
+  },
+
+  {
+    "id": 3,
+    "image": "/dataPhotos/projects/connectN.jpeg",
+    "name": "Connect N",
+    "description": "The program allows the user to play famous Connect 4. Unlike Connect 4, the user can create the board of the size up to 10*10, and the number of player can be up to 5.",
+    "liveTest": false,
+    "tools": "Python",
+    "gitLink": "https://github.com/UmidMuzrapov/java/tree/main/TSP"
+  },
+
+  {
+    "id": 4,
+    "image": "/dataPhotos/projects/rhymes.jpeg",
     "name": "Rhymes",
     "description": "The program reads words from the user, one word per line. Then, it returns all the words that perfectly rhyme with the given word. If no rhyme is found, or word is not in dictionary, program says there is no word found.",
     "liveTest": false,
-    "tools": "Python"
+    "tools": "Python",
+    "gitLink": "https://github.com/UmidMuzrapov/python/tree/main/rhymes/src"
   },
 
   {
     "id": 5,
-    "image": "/pages/dataPhotos/projects/mazeSolver.jpeg",
+    "image": "/dataPhotos/projects/mazeSolver.jpeg",
     "name": "Maze Solver",
     "description": "It reads the map up from a file, builds a tree to represent the maze, and then searches through the tree to find a path from the start to the end.",
     "liveTest": false,
-    "tools": "Python"
+    "tools": "Python",
+    "gitLink": "https://github.com/UmidMuzrapov/python/tree/main/mazeSolver"
   },
 
   {
     "id": 2,
-    "image": "/pages/dataPhotos/projects/railyard.jpg",
+    "image": "/dataPhotos/projects/railyard.jpg",
     "name": "Rail yard",
     "description": "The user moves train cars from track to track. Once a track contains only cars going to the same location, the train departs. The user wins if there is not car left.",
     "liveTest": false,
-    "tools": "Python"
+    "tools": "Python",
+    "gitLink": "https://github.com/UmidMuzrapov/python/tree/main/railyard/src"
   },
 
   {
     "id": 1,
-    "image": "/pages/dataPhotos/projects/wordSearch.jpeg",
+    "image": "/dataPhotos/projects/wordSearch.jpeg",
     "name": "Word Search",
     "description": " The program finds the words in crossword and prints out each words in separate grid, where everything except the word is replaced with '.'.",
     "liveTest": false,
-    "tools": "Python"
+    "tools": "Python",
+    "gitLink": "https://github.com/UmidMuzrapov/python/tree/main/wordSearch/src"
   }
 
 ]
