Add chatApp project

--- a/pages/wwwroot/dataJSON/projects.json
+++ b/pages/wwwroot/dataJSON/projects.json
@@ -1,11 +1,23 @@
 [
   {
     "id": 4,
+    "image": "/pages/dataPhotos/projects/chatApp.png",
+    "name": "Chat App",
+    "description": "Chat App allows the users to upload a message with an image after a successful log-in. Images are resized and stored in AWS S3. The service also uses cashing and cookies.",
+    "liveTest": false,
+    "tools": "AWS (Cloud Formation, Lambda, S3, ECS, ECR, Certificate Manager), JavaScipt, Docker, REST Architecture",
+    "category": "Other",
+    "gitLink": "https://github.com/UmidMuzrapov/chatApp"
+  },
+
+  {
+    "id": 4,
     "image": "/pages/dataPhotos/projects/patientQueue.jpeg",
     "name": "Patient Queue",
     "description": "The program simulates a patient queue using a self-created priority queue and heap sorting.",
     "liveTest": false,
     "tools": "Java",
+    "category": "Java",
     "gitLink": "https://github.com/UmidMuzrapov/java/tree/main/patientQueue/src"
   },
 
@@ -16,6 +28,7 @@
     "description": "The program simulates a garden where the user can grow a garden.",
     "liveTest": false,
     "tools": "Java",
+    "category": "Java",
     "gitLink": "https://github.com/UmidMuzrapov/java/tree/main/garden"
   },
   {
@@ -25,16 +38,18 @@
     "description": "The repository contains data structures -- array, queue, list, stack, graph, etc.",
     "liveTest": false,
     "tools": "Java",
+    "category": "Java",
     "gitLink": "https://github.com/UmidMuzrapov/java/tree/main/dataStructures"
   },
 
   {
     "id": 4,
     "image": "/pages/dataPhotos/projects/connectFour.jpeg",
-    "name": "Connect Four",
+    "name": "Coonect Four",
     "description": "The program allows two users to play ConnectFour game. The target values can be from 3 to 6 for win. The user can play game again if they want.",
     "liveTest": false,
     "tools": "Java",
+    "category": "Java",
     "gitLink": "https://github.com/UmidMuzrapov/java/tree/main/connectFour/src"
   },
 
@@ -45,6 +60,7 @@
     "description": "The program reads data from a CSV file, and plots the the houses.",
     "liveTest": false,
     "tools": "Java",
+    "category": "Java",
     "gitLink": "https://github.com/UmidMuzrapov/java/tree/main/cheapHouses/src"
   },
 
@@ -55,6 +71,7 @@
     "description": "The program solves the TSP using one of the four algorithms.",
     "liveTest": false,
     "tools": "Java",
+    "category": "Java",
     "gitLink": "https://github.com/UmidMuzrapov/python/tree/main/connectN"
   },
 
@@ -65,6 +82,7 @@
     "description": "The program allows the user to play famous Connect 4. Unlike Connect 4, the user can create the board of the size up to 10*10, and the number of player can be up to 5.",
     "liveTest": false,
     "tools": "Python",
+    "category": "Python",
     "gitLink": "https://github.com/UmidMuzrapov/java/tree/main/TSP"
   },
 
@@ -75,6 +93,7 @@
     "description": "The program reads words from the user, one word per line. Then, it returns all the words that perfectly rhyme with the given word. If no rhyme is found, or word is not in dictionary, program says there is no word found.",
     "liveTest": false,
     "tools": "Python",
+    "category": "Python",
     "gitLink": "https://github.com/UmidMuzrapov/python/tree/main/rhymes/src"
   },
 
@@ -85,6 +104,7 @@
     "description": "It reads the map up from a file, builds a tree to represent the maze, and then searches through the tree to find a path from the start to the end.",
     "liveTest": false,
     "tools": "Python",
+    "category": "Python",
     "gitLink": "https://github.com/UmidMuzrapov/python/tree/main/mazeSolver"
   },
 
@@ -95,6 +115,7 @@
     "description": "The user moves train cars from track to track. Once a track contains only cars going to the same location, the train departs. The user wins if there is not car left.",
     "liveTest": false,
     "tools": "Python",
+    "category": "Python",
     "gitLink": "https://github.com/UmidMuzrapov/python/tree/main/railyard/src"
   },
 
@@ -105,6 +126,7 @@
     "description": " The program finds the words in crossword and prints out each words in separate grid, where everything except the word is replaced with '.'.",
     "liveTest": false,
     "tools": "Python",
+    "category": "Python",
     "gitLink": "https://github.com/UmidMuzrapov/python/tree/main/wordSearch/src"
   }
 
