--- a/pages/wwwroot/dataJSON/projects.json
+++ b/pages/wwwroot/dataJSON/projects.json
@@ -4,7 +4,7 @@
     "image": "/pages/dataPhotos/projects/multitenancy.png",
     "name": "Multi-Tenancy for IoT Core Wireless",
     "description": "Multi-Tenancy for AWS IoT Wireless is a distributed, multi-tenant software that demonstrates to AWS IoT Wireless customers how to logically isolate data plane and LoRaWAN resources. The system consists of the client app, microservices, Amazon Cognito, and IoT Core Wireless, showing how to achieve multi-tenancy for wireless devices, gateways, and destinations under a single AWS account.",
-    "liveTest": true,
+    "liveTest": false,
     "liveTestLink": "http://iotsailboatmultitenancydemo1-dev.eba-m77uvmmp.us-east-1.elasticbeanstalk.com",
     "tools": "AWS (Cloud Formation, Lambda, ECS, ECR, Cognito, IAM, IoT, API Gateway), JavaScipt, C#, Docker, REST APIs",
     "category": "Other",
@@ -26,7 +26,7 @@
     "image": "/pages/dataPhotos/projects/weather.png",
     "name": "Global Weather",
     "description": "Gloabal Weather allows users to get weather conditions and analysis at any place on Earth. The app supports getting user's current location and maps.",
-    "liveTest": true,
+    "liveTest": false,
     "liveTestLink": "https://umidmuzrapov.github.io/weather2",
     "tools": "ASP.Net Core, CSS, HTML5, Radzen, JavaScript, Infrastructure as Code",
     "category": "Other",
